@@ -4,6 +4,7 @@
     - migrated to Dist::Milla and Moo
     - major code cleanup and refactoring
     - add HTTP HEAD and conditional GET
+    - fix feature index_property, remove include_index
 
 0.02  2013-07-02
     - new method: files
